# thor-public

./: Dockerfile  README.md  buildpypi.sh  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: test.yml
src/pythor/: __init__.py  asset.py  benchmark.py  compustat.py  feature.py  neural.py  numerai.py  numerai_signals.py  optimisation.py  util.py
tests/: test_module1.py
